--- a/Desktop/ModeladoPredictivo/Cuarta Asignacion/4 - Overfitting.ipynb
+++ b/Desktop/ModeladoPredictivo/Cuarta Asignacion/4 - Overfitting.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Execute if necessary\n",
     "# %%capture\n",
-    "# !pip install numpy seaborn matplotlib pandas openml"
+    "#!pip install numpy seaborn matplotlib pandas openml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "[164860 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "Categories (11, object): ['1' < '2' < '3' < '4' ... '8' < '9' < '10' < '11']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +341,148 @@
     "## Asignación 1 &#x1F921;\n",
     "\n",
     "Utilizando las técnicas vistas en clase, realicé su mejor esfuerzo para obtener el mejor modelo lineal posible utilizando __únicamente el conjunto de entrenamiento__ (X_train y y_train). Puede utilizar bibliotecas, pero únicamente las técnicas vistas en clase y debe ir generando métricas o visualizaciones que respalden su toma de decisiones. Debe tener e imprimir una estimación de $E_{out}$ utilizando su conjunto de entrenamiento. La métrica utilizada será la entropía cruzada."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- La columna a predecir se llama 'Class'\n",
+    "- Todas las características son ['V1' 'V2' 'V3' 'V4' 'V5' 'V6' 'V7']\n",
+    "- Las características categóricas son ['V1' 'V2']\n",
+    "- Las características numéricas son ['V3' 'V4' 'V5' 'V6' 'V7']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Como ya estan convertidos los datos categoricos no habrá necesidad de convertirlos\n",
+    "2. Elegí realizar Cross Validation porque puedes evaluar el rendimiento de tu modelo de manera más robusta que utilizando simplemente un conjunto de entrenamiento y prueba. También te permite comparar el rendimiento de diferentes modelos y seleccionar el mejor modelo para tus datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso, el modelo que se va a utilizar es una regresión lineal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtenemos el valor de la media y la desviación estándar de los scores obtenidos en cada iteración del cross validation\n",
+      "R2 Score: 0.02 (+/- 0.02)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "#Se utiliza el cross validation con 100 iteraciones y se obtiene el score de cada iteración\n",
+    "kf = KFold(n_splits=100, shuffle=True, random_state=42)\n",
+    "#Se utiliza el score R2 para evaluar el modelo\n",
+    "scores = cross_val_score(model, X_train, y_train, cv=kf, scoring='r2')\n",
+    "print(\"Obtenemos el valor de la media y la desviación estándar de los scores obtenidos en cada iteración del cross validation\") \n",
+    "print(\"R2 Score: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso, el modelo que se va a utilizar es una regresión lineal con OLS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtenemos el valor de la media y la desviación estándar de los scores obtenidos en cada iteración del cross validation\n",
+      "R2 Score: 0.02 (+/- 0.01)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LinearRegression(fit_intercept=True)\n",
+    "#Se utiliza el cross validation con 100 iteraciones y se obtiene el score de cada iteración\n",
+    "kf = KFold(n_splits=50, shuffle=True, random_state=42)\n",
+    "#Se utiliza el score R2 para evaluar el modelo\n",
+    "scores = cross_val_score(model, X_train, y_train, cv=kf, scoring='r2')\n",
+    "print(\"Obtenemos el valor de la media y la desviación estándar de los scores obtenidos en cada iteración del cross validation\") \n",
+    "print(\"R2 Score: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso, el modelo que se va utilizar es la normalizacion de X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizar los datos\n",
+    "from sklearn.preprocessing import StandardScaler    \n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "#normalizar los datos de y_train\n",
+    "y_train_scaled = (y_train - y_train.mean()) / y_train.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtenemos el valor de la media y la desviación estándar de los scores obtenidos en cada iteración del cross validation\n",
+      "R2 Score: 0.02 (+/- 0.01)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "#Se utiliza el cross validation con 100 iteraciones y se obtiene el score de cada iteración\n",
+    "kf = KFold(n_splits=50, shuffle=True, random_state=42)\n",
+    "#Se utiliza el score R2 para evaluar el modelo\n",
+    "scores = cross_val_score(model, X_train_scaled, y_train_scaled, cv=kf, scoring='r2')\n",
+    "print(\"Obtenemos el valor de la media y la desviación estándar de los scores obtenidos en cada iteración del cross validation\") \n",
+    "print(\"R2 Score: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
    ]
   },
   {
@@ -376,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
