--- a/Desktop/ModeladoPredictivo/Cuarta Asignacion/4 - Overfitting.ipynb
+++ b/Desktop/ModeladoPredictivo/Cuarta Asignacion/4 - Overfitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "[164860 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "Categories (11, object): ['1' < '2' < '3' < '4' ... '8' < '9' < '10' < '11']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +341,63 @@
     "## Asignación 1 &#x1F921;\n",
     "\n",
     "Utilizando las técnicas vistas en clase, realicé su mejor esfuerzo para obtener el mejor modelo lineal posible utilizando __únicamente el conjunto de entrenamiento__ (X_train y y_train). Puede utilizar bibliotecas, pero únicamente las técnicas vistas en clase y debe ir generando métricas o visualizaciones que respalden su toma de decisiones. Debe tener e imprimir una estimación de $E_{out}$ utilizando su conjunto de entrenamiento. La métrica utilizada será la entropía cruzada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error de validación cruzada: -6.35 +/- 0.09\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Aplicar cross validation para encontrar el mejor modelo de regresión lineal \n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Crear el modelo de regresión lineal\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Calcular el error de validación cruzada\n",
+    "scores = cross_val_score(model, X_train, y_train, cv=5, scoring=\"neg_mean_squared_error\")\n",
+    "print(f\"Error de validación cruzada: {scores.mean():.2f} +/- {scores.std():.2f}\")\n",
+    "\n",
+    "# Entrenar el modelo\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Calcular el error de entrenamiento\n",
+    "from sklearn.metrics import mean_squared_error\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error de validación cruzada: -33225249486708667295677670707930595328.00 +/- 16206447207654760777564566138348634112.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Aplicar cross validation para encontrar el mejor modelo de regresión lineal con algoritmo pocket\n",
+    "from sklearn.linear_model import SGDRegressor\n",
+    "\n",
+    "# Crear el modelo de regresión lineal\n",
+    "model = SGDRegressor(penalty=\"l2\", alpha=0.0001, max_iter=1000, tol=1e-3)\n",
+    "\n",
+    "# Calcular el error de validación cruzada\n",
+    "scores = cross_val_score(model, X_train, y_train, cv=5, scoring=\"neg_mean_squared_error\")\n",
+    "print(f\"Error de validación cruzada: {scores.mean():.2f} +/- {scores.std():.2f}\")"
    ]
   },
   {
@@ -376,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
