--- a/Desktop/ModeladoPredictivo/Quinta Asignacion/5 - Introducción a Modelos de Clasificación.ipynb
+++ b/Desktop/ModeladoPredictivo/Quinta Asignacion/5 - Introducción a Modelos de Clasificación.ipynb
@@ -877,6 +877,81 @@
     "        print(\"El comentario no es spam.\")\n",
     "        print(\" \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'compareTriplets' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER_ARRAY.\n",
+    "# The function accepts following parameters:\n",
+    "#  1. INTEGER_ARRAY a\n",
+    "#  2. INTEGER_ARRAY b\n",
+    "#\n",
+    "\n",
+    "def compareTriplets(a, b):\n",
+    "    # Write your code here\n",
+    "    \n",
+    "    print(a)\n",
+    "    print(b)\n",
+    "   \n",
+    "    result = []\n",
+    "    for x in range(3):\n",
+    "        print(a[x])\n",
+    "        print(b[x])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5]\n",
+      "[2, 3, 4]\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "   \n",
+    "\n",
+    "    a = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    b = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    result = compareTriplets(a, b)\n",
+    "\n",
+    "    #print(' '.join(map(str, result)))\n",
+    "    #print(a)\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
